--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
   sdk: ">=2.16.1 <3.0.0"
 
 dependencies:
+  csv: ^5.0.1
   flutter:
     sdk: flutter
   pasteboard: ^0.0.3
@@ -30,3 +31,4 @@ flutter:
   assets:
     - liberty_silhouette.png
     - github_logo.png
+    - quiz_questions.csv
