--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   csv: ^5.0.1
   dotted_border: ^2.0.0+2
   firebase_core: ^1.20.0
+  fluro: ^2.0.3
   flutter:
     sdk: flutter
   pasteboard: ^0.1.1
